--- a/app/sipreti/pubspec.yaml
+++ b/app/sipreti/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  camera: ^0.10.4
+  google_mlkit_face_detection: ^0.6.0
+  tflite_flutter: ^0.9.0
+  path_provider: ^2.1.4
+  image: ^3.3.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  isar_flutter_libs: ^3.1.0+1
+  firebase_storage: ^11.2.0
 
 dev_dependencies:
   flutter_test:
