--- a/app/sipreti/pubspec.yaml
+++ b/app/sipreti/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   hive_flutter: ^1.1.0
   isar_flutter_libs: ^3.1.0+1
   firebase_storage: ^11.2.0
+  # flutter_map: ^7.0.2
+  # latlong2: ^0.9.1
+  # geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
