--- a/app/sipreti/pubspec.yaml
+++ b/app/sipreti/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   # geolocator: ^12.0.0
   flutter_neumorphic_plus: ^3.4.0
   http: ^1.1.2
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
