--- a/app/sipreti/pubspec.yaml
+++ b/app/sipreti/pubspec.yaml
@@ -43,9 +43,9 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   isar_flutter_libs: ^3.1.0+1
-  # flutter_map: ^7.0.2
-  # latlong2: ^0.9.1
-  # geolocator: ^12.0.0
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  geolocator: ^10.1.1
   flutter_neumorphic_plus: ^3.4.0
   http: ^1.1.2
   vector_math: ^2.1.4
