--- a/app/sipreti/android/app/build.gradle
+++ b/app/sipreti/android/app/build.gradle
@@ -45,8 +45,9 @@ android {
         applicationId "com.example.sipreti"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+        compileSdkVersion 34
         minSdkVersion 23
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
