--- a/app/sipreti/pubspec.yaml
+++ b/app/sipreti/pubspec.yaml
@@ -35,17 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  # camera: ^0.10.4
-  # google_mlkit_face_detection: ^0.6.0
-  # tflite_flutter: ^0.9.0
+  camera: ^0.10.4
+  google_mlkit_face_detection: ^0.6.0
+  tflite_flutter: ^0.9.0
   path_provider: ^2.1.4
-  # image: ^3.3.0
+  image: ^3.3.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   isar_flutter_libs: ^3.1.0+1
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
   geolocator: ^10.1.1
+  geocoding: ^3.0.0
   flutter_neumorphic_plus: ^3.4.0
   http: ^1.1.2
   vector_math: ^2.1.4
