--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -46,6 +46,6 @@ jobs:
       - name: Run Composer Install
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_INSTANCE_IP }} "
-            cd /var/www/html/ci3
+            cd /var/www/html/sipreti
             sudo /usr/local/bin/composer install --no-interaction --prefer-dist
           "
