--- a/app/sipreti/pubspec.yaml
+++ b/app/sipreti/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   intl: ^0.20.2
   device_info_plus: ^9.1.2
   flutter_device_imei: ^0.0.4
+  file_picker: ^8.0.5
 
 dev_dependencies:
   flutter_test:
