--- a/app/sipreti/pubspec.yaml
+++ b/app/sipreti/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   device_info_plus: ^9.1.2
   flutter_device_imei: ^0.0.4
   file_picker: ^8.0.5
+  android_id: ^0.4.0
 
 dev_dependencies:
   flutter_test:
