--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -32,20 +32,53 @@ jobs:
           rsync -avz -e "ssh -o StrictHostKeyChecking=no" api/django/ ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_INSTANCE_IP }}:/tmp/deploy_django/
           ssh -o StrictHostKeyChecking=no ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_INSTANCE_IP }} "sudo rm -rf /var/www/html/django && sudo mv /tmp/deploy_django /var/www/html/django && sudo chown -R www-data:www-data /var/www/html/django"
 
-      # - name: Import MySQL database
-      #   run: |
-      #     ssh -o StrictHostKeyChecking=no ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_INSTANCE_IP }} "
-      #       mysql -u root -p'${{ secrets.MYSQL_ROOT_PASSWORD }}' -e '
-      #         DROP DATABASE IF EXISTS sipreti_db;
-      #         CREATE DATABASE sipreti_db;
-      #         USE sipreti_db;
-      #         SOURCE /var/www/html/sipreti/sipreti_db.sql;
-      #       '
-      #     "
-
-      - name: Run Composer Install
+      - name: Run Composer Install and Setup CI3
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_INSTANCE_IP }} "
             cd /var/www/html/sipreti
             sudo /usr/local/bin/composer install --no-interaction --prefer-dist
+
+            sudo sed -i \"s/'password' => '.*'/'password' => '${{ secrets.MYSQL_ROOT_PASSWORD }}'/\" application/config/database.php
+
+            sudo sed -i \"s|\\\$config\\['base_url'\\] = '.*';|\\\$config['base_url'] = 'http://${{ secrets.GCP_INSTANCE_IP }}/sipreti';|\" application/config/config.php
+
+            sudo sed -i "s|fetch('http://.*:8000/attendance/face-register/|fetch('http://${{ secrets.GCP_INSTANCE_IP }}:8000/attendance/face-register/|g" application/views/vektor_pegawai/pegawai_vektor_management.php
+
+            sudo sed -i \"s|http://.*:8000|http://${{ secrets.GCP_INSTANCE_IP }}:8000|g\" application/views/vektor_pegawai/pegawai_vektor_management.php
+
+            sudo sed -i \"s|http://.*:8000|http://${{ secrets.GCP_INSTANCE_IP }}:8000|g\" application/views/pegawai/pegawai_list.php
+          "
+
+      - name: Setup Django
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_INSTANCE_IP }} "
+            cd /var/www/html/django
+
+            sudo python3.8 -m venv venv
+
+            source venv/bin/activate
+
+            sudo chown -R ${{ secrets.GCP_USERNAME }}:${{ secrets.GCP_USERNAME }} /var/www/html/django/venv/
+
+            pip install --upgrade pip
+            pip install -r requirements.txt
+
+            sudo mkdir -p /var/www/html/django/sipreti/assets/auth
+            echo '${{ secrets.GOOGLE_DRIVE_KEY }}' | sudo tee /var/www/html/django/sipreti/assets/auth/credentials.json > /dev/null
+          "
+
+      - name: Configure Django settings.py
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_INSTANCE_IP }} "
+ 
+            cp /var/www/html/django/sipreti/sipreti/settings_copy.py /var/www/html/django/sipreti/sipreti/settings.py
+
+            sudo sed -i \"s|http://127.0.0.1|http://${{ secrets.GCP_INSTANCE_IP }}|g\" /var/www/html/django/sipreti/sipreti/settings.py
+
+            sudo sed -i \"s|^SECRET_KEY = .*|SECRET_KEY = '${{ secrets.DJANGO_KEY }}'|\" /var/www/html/django/sipreti/sipreti/settings.py
+
+            sudo sed -i \"s|http://localhost|http://${{ secrets.GCP_INSTANCE_IP }}|g\" /var/www/html/django/sipreti/sipreti/settings.py
+            sudo sed -i \"s|http://127.0.0.1|http://${{ secrets.GCP_INSTANCE_IP }}|g\" /var/www/html/django/sipreti/sipreti/settings.py
+
+            sudo sed -i \"s|'PASSWORD': *''|'PASSWORD': '${{ secrets.MYSQL_ROOT_PASSWORD }}'|\" /var/www/html/django/sipreti/sipreti/settings.py
           "
