--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -38,7 +38,7 @@ jobs:
             cd /var/www/html/sipreti
             sudo /usr/local/bin/composer install --no-interaction --prefer-dist
 
-            sudo sed -i "s|'password' => '\''.*'\''|'password' => '\''${{ secrets.MYSQL_ROOT_PASSWORD }}'\''|g" application/config/database.php
+            sudo sed -i "s|'password' => '\''.*'\''|'password' => '\''${{ secrets.MYSQL_PASSWORD }}'\''|g" application/config/database.php
 
             sudo sed -i "s|\$config\['base_url'\] = .*;|\$config['base_url'] = '\''http://${{ secrets.GCP_INSTANCE_IP }}/sipreti'\'';|g" application/config/config.php
 
@@ -83,7 +83,7 @@ jobs:
             sudo sed -i "s|http://localhost|http://${{ secrets.GCP_INSTANCE_IP }}|g" /var/www/html/django/sipreti/sipreti/settings.py
             sudo sed -i "s|http://127.0.0.1|http://${{ secrets.GCP_INSTANCE_IP }}|g" /var/www/html/django/sipreti/sipreti/settings.py
 
-            sudo sed -i "s|'PASSWORD': *''|'PASSWORD': '${{ secrets.MYSQL_ROOT_PASSWORD }}'|g" /var/www/html/django/sipreti/sipreti/settings.py
+            sudo sed -i "s|'PASSWORD': *''|'PASSWORD': '${{ secrets.MYSQL_PASSWORD }}'|g" /var/www/html/django/sipreti/sipreti/settings.py
           '
 
       - name: Restart sipreti service
