--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -70,7 +70,7 @@ jobs:
 
             # Buat folder dan file credentials.json
             sudo mkdir -p /var/www/html/django/sipreti/assets/auth
-            echo '${{ secrets.GOOGLE_DRIVE_KEY }}' | sudo tee /var/www/html/django/sipreti/assets/auth/credentials.json > /dev/null
+            echo "${{ secrets.GOOGLE_DRIVE_KEY }}" | base64 -d | sudo tee /var/www/html/django/sipreti/assets/auth/credentials.json > /dev/null
           "
 
       - name: Configure Django settings.py
