--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -52,26 +52,18 @@ jobs:
           
       - name: Setup Django
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_INSTANCE_IP }} "
+          ssh -o StrictHostKeyChecking=no ${{ secrets.GCP_USERNAME }}@${{ secrets.GCP_INSTANCE_IP }} '
             cd /var/www/html/django
-
-            # Buat virtual environment
             sudo python3.8 -m venv venv
-
-            # Aktifkan virtualenv
             source venv/bin/activate
 
-            # Ubah kepemilikan folder venv ke GCP_USERNAME
-            sudo chown -R \${{ secrets.GCP_USERNAME }}:\${{ secrets.GCP_USERNAME }} /var/www/html/django/venv/
-
-            # Install dependencies
-            pip install --upgrade pip
+            sudo chown -R $USER:$USER /var/www/html/django/venv/
+            
             pip install -r requirements.txt
 
-            # Buat folder dan file credentials.json
             sudo mkdir -p /var/www/html/django/sipreti/assets/auth
             echo "${{ secrets.GOOGLE_DRIVE_KEY }}" | base64 -d | sudo tee /var/www/html/django/sipreti/assets/auth/credentials.json > /dev/null
-          "
+          '
 
       - name: Configure Django settings.py
         run: |
