Memperbaiki error urls

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -58,6 +58,8 @@ jobs:
 
             sudo sed -i "s|fetch('http://.*:8000/attendance/face-register/|fetch('http://${{ secrets.GCP_INSTANCE_IP }}:8000/attendance/face-register/|g" application/views/vektor_pegawai/pegawai_vektor_management.php
 
+            sudo sed -i "s|fetch('http://.*:8000/attendance/face-register/|fetch('http://${{ secrets.GCP_INSTANCE_IP }}:8000/attendance/face-register/|g" application/views/vektor_pegawai_facenet/pegawai_vektor_management.php
+
             sudo sed -i "s|http://.*:8000|http://${{ secrets.GCP_INSTANCE_IP }}:8000|g" application/views/vektor_pegawai/pegawai_list.php
 
             sudo sed -i "s|http://.*:8000|http://${{ secrets.GCP_INSTANCE_IP }}:8000|g" application/views/vektor_pegawai/vektor_pegawai_list.php
