--- a/app/sipreti/pubspec.yaml
+++ b/app/sipreti/pubspec.yaml
@@ -83,6 +83,7 @@ flutter:
   assets:
     - assets/images/
     - assets/model/mobilefacenet.tflite
+    - assets/model/ghostfacenet.tflite
     - assets/model/facenet.tflite
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
